[project]
name = "mt-trader-eval"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "krewi1", email = "kratochvilp@post.cz"},
]
dependencies = ["fastapi[standard]>=0.115.6", "MetaTrader5>=5.0.4738"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
